import flow fixes: firefox layout bug, adding spinner in processing step between #4 and #5. other html and markup fixes.

--- a/app/themes/default/less/file-upload.less
+++ b/app/themes/default/less/file-upload.less
@@ -39,7 +39,7 @@
 .files{
     font-size: 11px;
     margin-top:5px;
-    float: left;
+    float: left !important;
     td{
         padding:2px 0 !important;
         vertical-align: middle;
