--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -1634,7 +1634,10 @@ td.empty{
     font-size:12px !important;
     color:#666;
     font-weight:400 !important;
-    margin:5px 0;
+    //margin:5px 0;
+}
+.panel label{
+    //margin-top:5px;
 }
 
 /*=Form Edit Account*/
